@@ -109,6 +109,54 @@ static void update_invloop(struct module_data *m, struct channel_data *xc)
 
 #endif
 
+/*
+ * From OpenMPT Arpeggio.xm test:
+ *
+ * "[FT2] Arpeggio behavior is very weird with more than 16 ticks per row. This
+ *  comes from the fact that Fasttracker 2 uses a LUT for computing the arpeggio
+ *  note (instead of doing something like tick%3 or similar). The LUT only has
+ *  16 entries, so when there are more than 16 ticks, it reads beyond array
+ *  boundaries. The vibrato table happens to be stored right after arpeggio
+ *  table. The tables look like this in memory:
+ *
+ *    ArpTab: 0,1,2,0,1,2,0,1,2,0,1,2,0,1,2,0
+ *    VibTab: 0,24,49,74,97,120,141,161,180,197,...
+ *
+ *  All values except for the first in the vibrato table are greater than 1, so
+ *  they trigger the third arpeggio note. Keep in mind that Fasttracker 2 counts
+ *  downwards, so the table has to be read from back to front, i.e. at 16 ticks
+ *  per row, the 16th entry in the LUT is the first to be read. This is also the
+ *  reason why Arpeggio is played 'backwards' in Fasttracker 2."
+ */
+static int ft2_arpeggio(struct context_data *ctx, struct channel_data *xc)
+{
+	struct player_data *p = &ctx->p;
+	int i;
+
+	if (xc->arpeggio.val[1] == 0 && xc->arpeggio.val[2] == 0) {
+		return 0;
+	}
+
+	if (p->frame == 0) {
+		return 0;
+	}
+
+	i = p->speed - p->frame;
+	while (i <= 0) {
+		i += p->speed;
+	}
+
+	if (i == 16) {
+		return 0;
+	}
+
+	if (i > 16) {
+		return xc->arpeggio.val[2];
+	}
+
+	return xc->arpeggio.val[i % 3];
+}
+
 static int is_first_frame(struct context_data *ctx)
 {
 	struct player_data *p = &ctx->p;
@@ -612,10 +660,13 @@ static void process_frequency(struct context_data *ctx, int chn, int act)
 
 	/* Arpeggio */
 
-	arp = xc->arpeggio.val[xc->arpeggio.count];
+	if (HAS_QUIRK(QUIRK_FT2BUGS)) {
+		arp = ft2_arpeggio(ctx, xc);
+	} else {
+		arp = xc->arpeggio.val[xc->arpeggio.count];
+	}
 
 	/* Pitch bend */
-
 
  	/* From OpenMPT PeriodLimit.s3m:
 	 * "ScreamTracker 3 limits the final output period to be at least 64,
